--- a/CW/app/src/main/res/layout/vegetables.xml
+++ b/CW/app/src/main/res/layout/vegetables.xml
@@ -4,7 +4,7 @@
 <ScrollView
 
     android:layout_width="match_parent"
-    android:layout_height="1000dp"
+    android:layout_height="wrap_content"
     android:fillViewport="true"
     android:background="@drawable/background_fon"
     android:scaleType="fitXY"
@@ -75,7 +75,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_cabbage"
+            android:drawableTop="@drawable/veg4"
             android:gravity="center_vertical"
             android:textOn="Капуста"
             android:textOff="Капуста"
@@ -94,7 +94,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_potato"
+            android:drawableTop="@drawable/veg5"
             android:gravity="center_vertical"
             android:textOn="Картофель"
             android:textOff="Картофель"
@@ -114,7 +114,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_corn"
+            android:drawableTop="@drawable/veg6"
             android:gravity="center_vertical"
             android:textOn="Кукуруза"
             android:textOff="Кукуруза"
@@ -133,7 +133,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_bow"
+            android:drawableTop="@drawable/veg7"
             android:gravity="center_vertical"
             android:textOn="Лук"
             android:textOff="Лук"
@@ -153,7 +153,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_carrot"
+            android:drawableTop="@drawable/veg8"
             android:gravity="center_vertical"
             android:textOn="Морковь"
             android:textOff="Морковь"
@@ -172,7 +172,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_cucumber"
+            android:drawableTop="@drawable/veg9"
             android:gravity="center_vertical"
             android:textOn="Огурец"
             android:textOff="Огурец"
@@ -192,7 +192,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_pepper"
+            android:drawableTop="@drawable/veg10"
             android:gravity="center_vertical"
             android:textOn="Перец"
             android:textOff="Перец"
@@ -210,7 +210,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_tomato"
+            android:drawableTop="@drawable/veg11"
             android:gravity="center_vertical"
             android:textOn="Помидор"
             android:textOff="Помидор"
@@ -230,7 +230,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_radish"
+            android:drawableTop="@drawable/veg12"
             android:gravity="center_vertical"
             android:textOn="Редис"
             android:textOff="Редис"
@@ -248,7 +248,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_beet"
+            android:drawableTop="@drawable/veg13"
             android:gravity="center_vertical"
             android:textOn="Свекла"
             android:textOff="Свекла"
@@ -267,7 +267,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_bean"
+            android:drawableTop="@drawable/veg14"
             android:gravity="center_vertical"
             android:textOn="Фасоль"
             android:textOff="Фасоль"
@@ -285,7 +285,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:background="@android:color/transparent"
-            android:drawableTop="@drawable/veg_garlic"
+            android:drawableTop="@drawable/veg15"
             android:gravity="center_vertical"
             android:textOn="Чеснок"
             android:textOff="Чеснок"
@@ -315,7 +315,7 @@
             android:id="@+id/textView2"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/radius"
-            android:text="ПРОСТО - ВКУСНО"
+            android:text="ОВОЩИ"
             android:textColor="#FEFEFE"
             android:gravity="center"
             android:textSize="25dp"/>
@@ -323,18 +323,34 @@
 
         <Button
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="45dp"
+            android:layout_height="40dp"
             android:id="@+id/button3"
             android:onClick="onClick"
             android:background="@drawable/radius_button"
             android:drawableStart="@drawable/back"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignBottom="@+id/textView2"
             android:gravity="center"
-            android:translationZ="3dp" />
+            android:translationZ="3dp"
+            android:layout_marginTop="5dp" />
 
+    </RelativeLayout>
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:id="@+id/textView3"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/footer_gradient"
+            android:textColor="#FEFEFE"
+            android:gravity="center"
+            android:textSize="25dp" />
     </RelativeLayout>
 
 </FrameLayout>
