--- a/CW/app/src/main/res/drawable/radius_button.xml
+++ b/CW/app/src/main/res/drawable/radius_button.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#ffffff"/>
+            <solid android:color="#EBEBEA"/>
             <corners
                 android:bottomRightRadius="20dip"
                 android:bottomLeftRadius="10dip"
