--- a/CW/app/src/main/res/drawable/vegetables_on_off.xml
+++ b/CW/app/src/main/res/drawable/vegetables_on_off.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/check"
-        android:state_checked="true" />
+        android:drawable="@drawable/veg_press"
+        android:state_pressed="true" />
     <item
         android:drawable="@drawable/veg_off"
         android:state_checked="false" />
