--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -247,8 +247,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="top"
-        android:translationZ="2dp">
+        android:translationZ="2dp"
+        android:gravity="top">
 
         <TextView
             android:layout_width="fill_parent"
