--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -244,41 +244,41 @@
     </ScrollView>
 
     <RelativeLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:translationZ="2dp"
+    android:gravity="top">
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:id="@+id/textView2"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/radius"
+        android:text="ПРОСТО - ВКУСНО"
+        android:textColor="#FEFEFE"
+        android:gravity="center"
+        android:textSize="25dp"/>
+
+    <ImageButton
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:id="@+id/imageButton2"
+        android:background="@android:color/transparent"
+        android:src="@drawable/mainstar"
+        android:clickable="true"
+        android:onClick="ClickImageButton"
         android:translationZ="2dp"
-        android:gravity="top">
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:id="@+id/textView2"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/radius"
-            android:text="ПРОСТО - ВКУСНО"
-            android:textColor="#FEFEFE"
-            android:gravity="center"
-            android:textSize="25dp"/>
-
-        <ImageButton
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/imageButton2"
-            android:background="@android:color/transparent"
-            android:src="@drawable/mainstar"
-            android:clickable="true"
-            android:onClick="ClickImageButton"
-            android:translationZ="2dp"
-            android:visibility="visible"
-            android:focusable="false"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="10dp" />
+        android:visibility="visible"
+        android:focusable="false"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp" />
 
 
-    </RelativeLayout>
+</RelativeLayout>
 
     <RelativeLayout
         android:orientation="vertical"
@@ -310,6 +310,18 @@
             android:layout_alignParentEnd="true"
             android:layout_marginRight="36dp"
             android:layout_marginEnd="36dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Меню"
+            android:textColor="#E72A30"
+            android:id="@+id/textView4"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="15dp"
+            android:textSize="17dp" />
 
     </RelativeLayout>
 
