--- a/CW/app/src/main/res/layout/recipe.xml
+++ b/CW/app/src/main/res/layout/recipe.xml
@@ -1,9 +1,14 @@
-<ScrollView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent" android:layout_width="match_parent">
+
+    <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:tileMode="repeat">
+    android:tileMode="repeat"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="30dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,20 +16,8 @@
         >
 
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="150dp"
-            android:layout_height="70dp"
-            android:text="В меню"
-            android:id="@+id/f_button_back"
-            android:onClick="onClick"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="600dp" />
-
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
@@ -33,7 +26,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="77dp"
+            android:layout_marginLeft="80dp"
             android:layout_marginStart="77dp" />
 
         <TextView
@@ -46,7 +39,8 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="53dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp" />
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="20dp" />
 
         <ImageButton
             android:layout_width="45dp"
@@ -58,8 +52,74 @@
             android:onClick="ClickImageButton"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignBottom="@+id/title" />
+            android:layout_alignBottom="@+id/title"
+            android:layout_marginLeft="15dp" />
 
     </RelativeLayout>
 
 </ScrollView>
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:id="@+id/textView2"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/radius"
+            android:text="Рецепт"
+            android:textColor="#FEFEFE"
+            android:gravity="center"
+            android:textSize="25dp"/>
+
+
+        <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="45dp"
+            android:layout_height="40dp"
+            android:id="@+id/button3"
+            android:onClick="onClick"
+            android:background="@drawable/radius_button"
+            android:drawableStart="@drawable/back"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:gravity="center"
+            android:translationZ="3dp"
+            android:layout_marginTop="5dp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom"
+        android:translationZ="2dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:id="@+id/textView3"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/footer_gradient"
+            android:textColor="#FEFEFE"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:layout_alignParentBottom="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Меню -> Выбор блюда -> Рецепт"
+            android:textColor="#E72A30"
+            android:id="@+id/textView4"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="15dp"
+            android:textSize="17dp" />
+
+    </RelativeLayout>
+</FrameLayout>
