1) Обновил стартовую картинку. 2) Обновил активити (убрал картинки).

--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -110,7 +110,8 @@
         android:id="@+id/nuts"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/button_background"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/nuts_on_off"
         android:gravity="center_vertical"
         android:textOn="Орехи"
         android:textOff="Орехи"
@@ -148,7 +149,8 @@
         android:id="@+id/refill"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/button_background"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/refill_on_off"
         android:gravity="center_vertical"
         android:textOn="Заправка"
         android:textOff="Заправка"
