--- a/CW/app/src/main/res/layout/supplements.xml
+++ b/CW/app/src/main/res/layout/supplements.xml
@@ -15,7 +15,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
             android:textOn="Ванилин"
             android:textOff="Ванилин"
@@ -33,7 +32,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
             android:textOn="Ваниль"
             android:textOff="Ваниль"
@@ -50,7 +48,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
             android:textOn="Вассаби"
             android:textOff="Вассаби"
@@ -67,7 +64,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
             android:textOn="Дрожжи"
             android:textOff="Дрожжи"
@@ -86,7 +82,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
             android:textOn="Желатин"
             android:textOff="Желатин"
@@ -104,7 +99,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_lemon"
             android:gravity="center_vertical"
             android:textOn="Лимонная кислота"
             android:textOff="Лимонная кислота"
@@ -122,7 +116,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
             android:textOn="Мак"
             android:textOff="Мак"
@@ -141,7 +134,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
             android:textOn="Мука"
             android:textOff="Мука"
@@ -159,7 +151,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
             android:textOn="Разрыхлитель"
             android:textOff="Разрыхлитель"
@@ -177,10 +168,9 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="С.пудра"
-            android:textOff="С.пудра"
+            android:textOn="Сахарная пудра"
+            android:textOff="Сахарная пудра"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -196,7 +186,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
             android:textOn="Сода"
             android:textOff="Сода"
@@ -214,7 +203,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
             android:textOn="Уксус"
             android:textOff="Уксус"
