--- a/CW/app/src/main/res/layout/refill.xml
+++ b/CW/app/src/main/res/layout/refill.xml
@@ -15,7 +15,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
             android:textOn="Варенье"
             android:textOff="Варенье"
@@ -31,7 +30,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
             android:textOn="Карамель"
             android:textOff="Карамель"
@@ -47,10 +45,9 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
-            android:textOn="К.Заварной"
-            android:textOff="К.Заварной"
+            android:textOn="Крем заварной"
+            android:textOff="Крем заварной"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -64,7 +61,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
             android:textOn="Майонез"
             android:textOff="Майонез"
@@ -83,7 +79,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
             android:textOn="Масло раст"
             android:textOff="Масло раст"
@@ -101,11 +96,10 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_lemon"
             android:gravity="center_vertical"
             android:textOn="Томатная паста"
             android:textOff="Томатная паста"
-            android:textSize="10dp"
+            android:textSize="13dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
@@ -119,7 +113,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
             android:textOn="Сироп"
             android:textOff="Сироп"
@@ -138,7 +131,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_peache"
             android:gravity="center_vertical"
             android:textOn="Соус"
             android:textOff="Соус"
@@ -153,9 +145,8 @@
         <ToggleButton
             android:id="@+id/fr_9"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_plum"
             android:gravity="center_vertical"
             android:textOn="Сухари"
             android:textOff="Сухари"
