--- a/CW/app/src/main/res/layout/splash_screen.xml
+++ b/CW/app/src/main/res/layout/splash_screen.xml
@@ -9,6 +9,6 @@
         android:layout_height="fill_parent"
         android:src="@drawable/splash_screen"
         android:layout_gravity="center"
-        android:scaleType="fitCenter"/>
+        android:scaleType="fitXY"/>
 
 </LinearLayout>
