Добавления: 1) При выборе продуктов менее 5 - не отсылает их на сервер, а выводит сообщение, что нужно выбрать ещё. 2) Если приложение не может подключиться к серверу - выводится сообщение. 3) Если в БД нету блюд из таких продуктов - выводятся сообщения. Обновления: Меняше стали вылетать активити с продуктами (добавил в манифест 2 строки).

--- a/CW/app/src/main/res/layout/meals.xml
+++ b/CW/app/src/main/res/layout/meals.xml
@@ -72,7 +72,7 @@ android:layout_height="match_parent" android:layout_width="match_parent">
             android:layout_width="45dp"
             android:layout_height="40dp"
             android:id="@+id/button3"
-            android:onClick="onClick"
+            android:onClick="onClickBack"
             android:background="@drawable/radius_button"
             android:drawableStart="@drawable/back"
             android:layout_alignParentLeft="true"
