--- a/CW/app/src/main/res/drawable/radius.xml
+++ b/CW/app/src/main/res/drawable/radius.xml
@@ -4,9 +4,9 @@
     <item>
         <shape>
             <solid android:color="#E72A30"/>
-            <corners
+           <!-- <corners
                 android:bottomRightRadius="10dip"
                 android:bottomLeftRadius="10dip" />
-        </shape>
+        --> </shape>
     </item>
 </selector>
